--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ services:
 
   spark3-thrift:
     build:
-      context: docker/spark/.
-      dockerfile: docker/spark/Dockerfile
+      context: ./docker/spark
+      dockerfile: Dockerfile
     ports:
       - "10000:10000"
       - "4040:4040"
@@ -19,7 +19,7 @@ services:
     environment:
       - WAIT_FOR=dbt-hive-metastore:5432
 
-  dbt-hive-metastore:
+  dbt-hivedocker-metastore:
     image: postgres:9-alpine
     volumes:
       - ./.hive-metastore/:/var/lib/postgresql/data
